// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar component renders 1`] = `
@media  {
  .c-glwkin {
    background: white;
    position: sticky;
    display: flex;
    align-items: center;
    width: 100vw;
    top: 0;
    z-index: 1;
    border-bottom: 1px solid var(--colors-tonal100);
    transition: box-shadow .2s ease-out;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-ftiHlK {
    align-items: center;
    height: var(--sizes-4);
    margin-left: var(--space-4);
    margin-right: var(--space-4);
    width: 100%;
  }

@media (min-width: 800px) {
    .c-ftiHlK {
      margin-left: var(--space-5);
      margin-right: var(--space-5);
    }
}

  .c-dbEDIJ {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--colors-tonal400);
  }

  .c-dbEDIJ:hover,
  .c-dbEDIJ:focus {
    text-decoration: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-ldsiYK {
    color: var(--colors-tonal400);
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jpqjUq {
    border: 0;
    background: var(--colors-tonal200);
  }
}

@media  {
  .c-glwkin-daNQNf-size-md {
    height: var(--sizes-6);
  }

  .c-glwkin-daNQNf-size-md .topbar-brand-logo[src$=".svg"] {
    height: 24px;
    width: auto;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-jpqjUq-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-jpqjUq-ieFaPrQ-css {
    height: var(--sizes-2);
    background: var(--colors-tonal100);
  }
}

<body>
  <div
    class="c-glwkin c-glwkin-daNQNf-size-md"
  >
    <div
      class="c-dhzjXW c-ftiHlK"
    >
      <a
        class="c-dbEDIJ"
        href="atomlearning.co.uk"
      >
        <p
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-ldsiYK"
        >
          Admin Panel
        </p>
      </a>
      <button
        aria-label="Search"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412L20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </button>
      <hr
        class="c-jpqjUq c-jpqjUq-fKZlxR-orientation-vertical c-jpqjUq-ieFaPrQ-css"
      />
      <button
        aria-label="Light/Dark mode"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7 14a2 2 0 110-4 2 2 0 010 4z"
            fill-rule="evenodd"
          />
          <path
            d="M7 17A5 5 0 017 7h9a5 5 0 010 10H7z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`TopBar component renders the lg variant 1`] = `
@media  {
  .c-glwkin {
    background: white;
    position: sticky;
    display: flex;
    align-items: center;
    width: 100vw;
    top: 0;
    z-index: 1;
    border-bottom: 1px solid var(--colors-tonal100);
    transition: box-shadow .2s ease-out;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-ftiHlK {
    align-items: center;
    height: var(--sizes-4);
    margin-left: var(--space-4);
    margin-right: var(--space-4);
    width: 100%;
  }

@media (min-width: 800px) {
    .c-ftiHlK {
      margin-left: var(--space-5);
      margin-right: var(--space-5);
    }
}

  .c-dbEDIJ {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--colors-tonal400);
  }

  .c-dbEDIJ:hover,
  .c-dbEDIJ:focus {
    text-decoration: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-ldsiYK {
    color: var(--colors-tonal400);
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jpqjUq {
    border: 0;
    background: var(--colors-tonal200);
  }
}

@media  {
  .c-glwkin-daNQNf-size-md {
    height: var(--sizes-6);
  }

  .c-glwkin-daNQNf-size-md .topbar-brand-logo[src$=".svg"] {
    height: 24px;
    width: auto;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-jpqjUq-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }

  .c-glwkin-lcsdih-size-lg {
    height: var(--sizes-7);
  }

  .c-glwkin-lcsdih-size-lg .topbar-brand-logo[src$=".svg"] {
    height: 32px;
    width: auto;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-jpqjUq-ieFaPrQ-css {
    height: var(--sizes-2);
    background: var(--colors-tonal100);
  }
}

<body>
  <div
    class="c-glwkin c-glwkin-lcsdih-size-lg"
  >
    <div
      class="c-dhzjXW c-ftiHlK"
    >
      <a
        class="c-dbEDIJ"
        href="atomlearning.co.uk"
      >
        <p
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-ldsiYK"
        >
          Admin Panel
        </p>
      </a>
      <button
        aria-label="Search"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412L20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </button>
      <hr
        class="c-jpqjUq c-jpqjUq-fKZlxR-orientation-vertical c-jpqjUq-ieFaPrQ-css"
      />
      <button
        aria-label="Light/Dark mode"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7 14a2 2 0 110-4 2 2 0 010 4z"
            fill-rule="evenodd"
          />
          <path
            d="M7 17A5 5 0 017 7h9a5 5 0 010 10H7z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
